# templates

./: cargo-generate.toml
axum-svelte-postgres/: .justfile  Cargo.toml
axum-svelte-postgres/crates/{{project-name}}/: Cargo.toml
axum-svelte-postgres/crates/{{project-name}}/src/: error.rs  lib.rs
axum-svelte-postgres/site/: .prettierignore  .prettierrc.toml  index.html  package-lock.json  package.json  svelte.config.ts  tsconfig.json  vite.config.ts
axum-svelte-postgres/site/src/: App.svelte  main.ts  vite-env.d.ts
axum-svelte-postgres/src/: lib.rs  main.rs
