[workspace]
resolver = "3"
package.edition = "2024"
package.version = "0.1.0"
members = ["crates/{{project-name}}"]

[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
{{crate_name}} = { workspace = true }

tokio = { workspace = true }
thiserror = { workspace = true }
bon = { workspace = true }
axum = { workspace = true }
tracing-subscriber = { workspace = true }

[workspace.dependencies]
# Local
{{crate_name}} = { path = "crates/{{project-name}}" }

# External
axum = { version = "0.8.4", features = ["macros", "ws"] }
bon = "3.4.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[workspace.dependencies.sqlx]
version = "0.8.6"
features = ["chrono", "macros", "postgres", "runtime-tokio"]

[workspace.dependencies.ts-rs]
version = "11.0.1"
features = [
  "chrono-impl",
  "serde-json-impl",
  "serde-compat",
  "no-serde-warnings", # Occasionally remove this to make sure things are going as expected
]

[profile.dev.package.sqlx-macros]
opt-level = 3
