[package]
name = "{{crate_name}}"
edition.workspace = true
version.workspace = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
bon = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
